--- a/src/_variables.css
+++ b/src/_variables.css
@@ -60,6 +60,8 @@ Variables
     --header-background-color: var(--color-orange-700);
     --header-border-color: var(--color-orange-500);
     --header-border-size: 5px;
+    --content-width-max: 960px;
+    --content-margin-bottom: 4rem;
     /* Buttons  */
     --button-background-color: var(--color-blue-700);
     --button-background-color-hover: var(--color-blue-500);
@@ -84,7 +86,6 @@ Variables
     --content-link-underline-color-visited: var(--color-gray-200);
     --content-link-underline-thickness: 0.25em;
     --content-link-underline-thickness-hover: 0.4em;
-    --content-width-max: 960px;
     --hr-size: 5px;
     --page-title-color: var(--color-yellow-600);
     --page-title-size: var(--font-size-xxl);
